# canonical-multipass-mcp-server

./: .gitignore  Makefile  Makefile.sync  README.md  pyproject.toml
canonical_multipass_mcp/: multipass_client.py  multipass_pb2.py  multipass_pb2.pyi  multipass_pb2_grpc.py  server.py
hack/: pb_codegen.sh
proto/: .rsync-filter
